--- a/templates/base.html
+++ b/templates/base.html
@@ -89,5 +89,11 @@
             <div class="footer-copyright text-center"><a href="#page-start">Go to top of page</a></div>
         </footer>
         <br>
+
+        <script>
+        $(document).ready(function(){
+          $('[data-toggle="tooltip"]').tooltip();
+        });
+        </script>
     </body>
 </html>
