--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -16,6 +16,8 @@
         </div>
         <br><br>
 
-        <a href="{{ url_for('show_creators') }}">All Creators</a>
+        <a href="{{ url_for('show_creators') }}" class="btn btn-default">
+            <span class="glyphicon glyphicon-th-list"></span> All Creators
+        </a>
     </div>
 {% endblock %}
