--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -18,66 +18,66 @@
             <div class="panel-body">{{ room.room_desc }}</div>
         </div>
 
-        <br><hr class="little"><br>
-        <h4>Room Actions</h4>
-        <br>
+        <br><br>
 
-        {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-            <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Edit Room</button>
-
-            <!-- Modal -->
-            <div id="myModal" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Edit Room</h4>
-                        </div>
-                        <div class="modal-body">
-                            <form action="{{ url_for('show_room_p', room_id=room.room_id) }}" method="POST">
-                                {{ form.csrf_token }}
-                                <div class="form-group">
-                                    <label for="name">{{ form.name.label }}</label>
-                                    {{ form.name(size=20, class="form-control") }}
-                                </div>
-                                {% for error in form.name.errors %}
-                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                                {% endfor %}
-                                <div class="form-group">
-                                    <label for="description">{{ form.description.label }}</label>
-                                    {{ form.description(size=40, class="form-control") }}
-                                </div>
-                                {% for error in form.description.errors %}
-                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                                {% endfor %}
-                                <div class="form-group">
-                                    <label for="image">{{ form.image.label }}</label>
-                                    {{ form.image(size=20, class="form-control") }}
-                                </div>
-                                {% for error in form.image.errors %}
-                                    <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
-                                {% endfor %}
-                                <button type="submit" class="btn btn-default">Update</button>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        </div>
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Edit Room</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ url_for('show_room_p', room_id=room.room_id) }}" method="POST">
+                            {{ form.csrf_token }}
+                            <div class="form-group">
+                                <label for="name">{{ form.name.label }}</label>
+                                {{ form.name(size=20, class="form-control") }}
+                            </div>
+                            {% for error in form.name.errors %}
+                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                            {% endfor %}
+                            <div class="form-group">
+                                <label for="description">{{ form.description.label }}</label>
+                                {{ form.description(size=40, class="form-control") }}
+                            </div>
+                            {% for error in form.description.errors %}
+                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                            {% endfor %}
+                            <div class="form-group">
+                                <label for="image">{{ form.image.label }}</label>
+                                {{ form.image(size=20, class="form-control") }}
+                            </div>
+                            {% for error in form.image.errors %}
+                                <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
+                            {% endfor %}
+                            <button type="submit" class="btn btn-default">Update</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
-            <br><br>
+        </div>
 
-            <form action="{{ url_for('show_deleted_room', room_id=room.room_id) }}">
-                <button type="submit" class="btn btn-danger">Delete Room</button>
-            </form>
-        {% else %}
-            No actions available.
-        {% endif %}
-        <br><br>
+        <div class="btn-toolbar">
+            <a href="{{ url_for('show_rooms', world_id=room.world_id) }}" class="btn btn-default btn-space">
+                <span class="glyphicon glyphicon-th-list"></span> All Rooms
+            </a>
 
-        <a href="{{ url_for('show_rooms', world_id=room.world_id) }}">All Rooms</a>
+            {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                <!-- Trigger the modal with a button -->
+                <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit Room</button>
+
+                <form action="{{ url_for('show_deleted_room', room_id=room.room_id) }}">
+                    <button type="submit" class="btn btn-danger btn-space">Delete Room</button>
+                </form>
+
+                <br><br>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
