--- a/templates/quest_detail.html
+++ b/templates/quest_detail.html
@@ -3,20 +3,26 @@
 {% block content %}
     <div class = "page-header">
         <h2>
-            {% block title %} Single Quest {% endblock %}
+            {% block title %} Quest {% endblock %}
         </h2>
     </div>
 
     <div class="container-fluid">
-        <form action="{{ url_for('show_quest', objective_id=objective_id)}}" method="POST">
-            <div class="form-group">
-                <label for="quest">Quest:</label>
-                <textarea name="quest" cols="50" rows="10" id="quest" class="form-control">{{ quest }}</textarea>
-            </div>
-            <script>
-                const easyMDE = new EasyMDE();
-            </script>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <div class="btn-toolbar">
+            <form action="{{ url_for('show_quest', objective_id=objective_id)}}" method="POST">
+                <div class="form-group">
+                    <label for="quest">Edit Content:</label>
+                    <textarea name="quest" cols="50" rows="10" id="quest" class="form-control">{{ quest }}</textarea>
+                </div>
+                <script>
+                    const easyMDE = new EasyMDE();
+                </script>
+                <button type="submit" class="btn btn-default btn-space">Submit</button>
+            </form>
+
+            <form action="{{ url_for('show_objective', objective_id=objective_id) }}">
+                <button type="submit" class="btn btn-default btn-space">Cancel</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
