--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -20,6 +20,27 @@
 
         <br><br>
 
+        <!-- Delete Modal -->
+        <div id="myModal_del" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Delete Room</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ url_for('show_deleted_room', room_id=room.room_id) }}">
+                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Modal -->
         <div id="myModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -72,9 +93,7 @@
                 <!-- Trigger the modal with a button -->
                 <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit Room</button>
 
-                <form action="{{ url_for('show_deleted_room', room_id=room.room_id) }}">
-                    <button type="submit" class="btn btn-danger btn-space">Delete Room</button>
-                </form>
+                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete Room</button>
 
                 <br><br>
             {% endif %}
