--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -3,27 +3,59 @@
 {% block content %}
     <div class = "page-header">
         <h2>
-            {% block title %} Single Solution {% endblock %}
+            {% block title %} My Solution {% endblock %}
         </h2>
     </div>
 
     <div class="container-fluid">
+    <!-- Delete Modal -->
+        <div id="myModal_del" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Delete Solution</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ url_for('show_deleted_solution', objective_id=objective_id) }}">
+                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <h4>For following quest:</h4>
         {{ mdquest|safe }}
-        <br><br>
 
-        <form action="{{ url_for('show_my_solution', objective_id=objective_id)}}" method="POST">
-            <div class="form-group">
-                <label for="solution">Solution:</label>
-                <textarea name="solution" cols="50" rows="10" id="solution" class="form-control">{{ solution }}</textarea>
-            </div>
-            <script>
-                const easyMDE = new EasyMDE();
-            </script>
-            <div class="checkbox">
-                <label><input type="checkbox" id="visible" name="visible" value="1" {{ 'checked' if (visible==1) }}> Make solution public</label>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        <br><hr class="little"><br>
+
+        <div class="btn-toolbar">
+            <form action="{{ url_for('show_my_solution', objective_id=objective_id)}}" method="POST">
+                <div class="form-group">
+                    <label for="solution">Edit Solution:</label>
+                    <textarea name="solution" cols="50" rows="10" id="solution" class="form-control">{{ solution }}</textarea>
+                </div>
+                <script>
+                    const easyMDE = new EasyMDE();
+                </script>
+                <div class="checkbox">
+                    <label><input type="checkbox" id="visible" name="visible" value="1" {{ 'checked' if (visible==1) }}> Make solution public</label>
+                </div>
+                <button type="submit" class="btn btn-default btn-space">Submit</button>
+            </form>
+
+            <form action="{{ url_for('show_objective', objective_id=objective_id) }}">
+                <button type="submit" class="btn btn-default btn-space">Cancel</button>
+            </form>
+
+            {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
+                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete Solution</button>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
