--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -21,6 +21,27 @@
 
         <br><br>
 
+        <!-- Delete Modal -->
+        <div id="myModal_del" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Delete World</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ url_for('show_deleted_world', world_id=world.world_id) }}">
+                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Modal -->
         <div id="myModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -80,6 +101,15 @@
                 <button type="submit" class="btn btn-primary btn-space">Select World</button>
             </form>
 
+            {% if current_user.creator_id == world.creator_id %}
+                <!-- Trigger the modal with a button -->
+                <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit World</button>
+
+                <form action="{{ url_for('show_switched_world', world_id=world.world_id) }}">
+                    <button type="submit" class="btn btn-default btn-space">Switch Visibility</button>
+                </form>
+            {% endif %}
+
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_walkthrough', world_id=world.world_id, format_type='markdown') }}">
                     <button type="submit" class="btn btn-default btn-space">Create Walkthrough (Markdown)</button>
@@ -93,19 +123,9 @@
             {% endif %}
 
             {% if current_user.creator_id == world.creator_id %}
-                <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit World</button>
-
-                <form action="{{ url_for('show_switched_world', world_id=world.world_id) }}">
-                    <button type="submit" class="btn btn-default btn-space">Switch Visibility</button>
-                </form>
-
-                <form action="{{ url_for('show_deleted_world', world_id=world.world_id) }}">
-                    <button type="submit" class="btn btn-danger btn-space">Delete Item</button>
-                </form>
+                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete World</button>
             {% endif %}
             <br><br>
-
         </div>
     </div>
 {% endblock %}
