--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,9 @@
 
     <div class="container-fluid">
         <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
-        Currently WIP - work in progress. 😀<br>
+        Makes creating solutions and reports easy and fun 😀<br>
         <br>
+        Based on <a href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a href="https://contabo.com/en/">Contabo</a> servers.<br>
         If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>.
         <br><br><br>
     </div>
